--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -18,12 +18,21 @@
 
         <!-- 1-0-0. 인트로 영역 -->
         <div class="intro-area">
-                <div class="intro-box">
+                <section class="intro-box">
                   <p></p>
-                </div>
+                </section>
         </div>
 
         <!-- 1-0-1. 티켓영역 -->
+         <div class="ticket-area">
+                <section class="ticket-box">
+                  <h1 class="ticket">
+                    <a href="#">
+                      <img src="../01.자료수집/img/팬텀관련/팬텀 이미지/" alt="로고" style="width: 94px;height: 36px;">
+                    </a>
+                  </h1>
+                </section>
+        </div>
 
         <!-- 상단영역 플렉스부모박스 : .cont-box -->
         <div class="cont-box">
@@ -39,45 +48,31 @@
           <section class="menu-box">
             <!-- 메뉴박스하위 메뉴그룹박스 -->
             <div class="menu-group">
-              <!-- 1-2-1. 탑메뉴 -->
-              <nav class="top-menu">
-                <ul>
-                  <li><a href="">로그인</a></li>
-                  <li><a href="">회원가입</a></li>
-                  <li><a href="">검색</a></li>
-                </ul>
-              </nav>
-              <!-- 1-2-2. GNB메뉴 -->
+              <!-- 1-2-1. GNB메뉴 -->
               <nav class="gnb-menu">
                 <ul>
-                  <li><a href="">About tvN</a></li>
-                  <li><a href="">편성표</a></li>
-                  <li><a href="">채널번호</a></li>
-                  <li><a href="">드라마</a>
-                    <article class="sub-menu">
+                  <li><a href="">EMK</a>
+                  <article class="sub-menu">
                         <div class="index">
-                            <aside class="title-bar">
-                                <h2>드라마</h2>
-                                <div class="close-btn">×</div>
-                            </aside>
                             <aside class="sub-list">
-                                <ul>
-                                    <li><a href="#">[예정] 태풍상사</a></li>
-                                    <li><a href="#">[종영] 첫, 사랑을 위하여</a></li>
-                                    <li><a href="#">[예정] 신사장 프로젝트</a></li>
-                                    <li><a href="#">[종영] O'PENing 2025</a></li>
-                                    <li><a href="#">[금토] 버터플라이</a></li>
-                                    <li><a href="#">[종영] 서초동</a></li>
-                                    <li><a href="#">[토일] 폭군의 셰프</a></li>
+                                <ul class style="font-size: 1.1rem;
+                                                  gap: 1.3rem;
+                                                  background-color: #fff;
+                                                  color: #000;">
+                                    <li><a href="#">ABOUT US</a></li>
+                                    <li><a href="#">ABOUT CEO</a></li>
+                                    <li><a href="#">HISTORY</a></li>
                                 </ul>
                             </aside>
                         </div>
-                    </article></li>
-                  <li><a href="">연예오락</a></li>
-                  <li><a href="">인사이트</a></li>
-                  <li><a href="">동영상</a></li>
-                  <li><a href="">이벤트</a></li>
-                  <li><a href="">프로그램</a></li>
+                    </article>
+                  </li>
+                  <li><a href="">PRODUCTION</a></li>
+                  <li><a href="">AUDITION</a></li>
+                  <li><a href="">BOARD</a></li>
+                  <li><a href="">SHOP</a></li>
+                  <li><a href="">RECRUIT</a>
+                    </li>
                 </ul>
               </nav>
             </div>
