--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -16,7 +16,7 @@
     </div>
     
     <!-- 0. 최상단영역 -->
-    <div id="infro-ticket-area">
+    <div id="intro-ticket-area">
       <header class="ti-box">
         <section class="ticket-box">
             <div class="ticket">
@@ -81,11 +81,6 @@
           </section>
         </div>
       </header>
-    </div>
-
-    <!-- 1.5. 드라마파트메뉴 -->
-    <div id="drama-part-menu">
-      <nav class="drama-part-menu inbox"></nav>
     </div>
 
     <!-- 2. 메인영역 -->
