--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -85,10 +85,18 @@
 
     <!-- 2. 메인영역 -->
     <div id="main-area">
+      
+
       <main class="main-area">
-        <!-- 2-1. 배너영역 -->
-        <section class="banner-part">
-          <h2 class="temp-tit">2-1. 배너영역</h2>
+        <!-- 2-1. 팬텀 3D 영역 -->
+        <section class="d-part inbox">
+            <div class="d" style="text-align: center;">
+                <article class="d-img">
+                  <a href="#">
+                      <img src="../01.자료수집/img/팬텀관련/팬텀이미지/글씨 3D copy.png" alt="">
+                  </a>
+                </article>
+            </div>
         </section>
 
         <!-- 2-2. 캐릭터영역 -->
