--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -89,16 +89,17 @@
 
       <main class="main-area">
         <!-- 2-1. 팬텀 3D 영역 -->
-        <section class="d-part inbox">
-            <div class="d" style="text-align: center;">
-                <article class="d-img">
-                  <a href="#">
-                      <img src="../01.자료수집/img/팬텀관련/팬텀이미지/글씨 3D copy.png" alt="">
-                  </a>
-                </article>
+        <section class="b-part inbox">
+            <div class="b" style="text-align: center;">
             </div>
-        </section>
-
+          </section>
+          
+          <article class="d-img">
+            <a href="#">
+                <img src="../01.자료수집/img/팬텀관련/팬텀이미지/글씨 3D copy.png" alt="">
+            </a>
+          </article>
+          
         <!-- 2-2. 캐릭터영역 -->
         <section class="cat-part inbox">
           <h2 class="temp-tit">2-2. 캐릭터영역</h2>
