--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -54,7 +54,7 @@
           <section class="logo-box">
             <h1 class="logo">
               <a href="#">
-                <img src="../01.자료수집/img/팬텀관련/로고/emk_logo_수정.png" alt="로고" style="width: 94px;height: 36px;">
+                <img src="../01.자료수집/img/로고/emk_logo_수정.png" alt="로고" style="width: 94px;height: 36px;">
               </a>
             </h1>
           </section>
@@ -80,12 +80,53 @@
                         </div>
                     </article>
                   </li>
-                  <li><a href="">PRODUCTION</a></li>
+                  <li><a href="">PRODUCTION</a>
+                  <article class="sub-menu">
+                        <div class="index">
+                            <aside class="sub-list">
+                                <div class="sub-list-padding-box">
+                                  <ul>
+                                      <li><a href="#">ORIGINAL</a></li>
+                                      <li><a href="#">LICENSE</a></li>
+                                  </ul>
+                                </div>
+                            </aside>
+                        </div>
+                    </article>
+                  </li>
                   <li><a href="">AUDITION</a></li>
-                  <li><a href="">BOARD</a></li>
+                  <li><a href="">BOARD</a>
+                  <article class="sub-menu">
+                        <div class="index">
+                            <aside class="sub-list">
+                                <div class="sub-list-padding-box">
+                                  <ul>
+                                      <li><a href="#">NOTISE</a></li>
+                                      <li><a href="#">NEWS</a></li>
+                                  </ul>
+                                </div>
+                            </aside>
+                        </div>
+                    </article>
+                  </li>
                   <li><a href="">SHOP</a></li>
                   <li><a href="">RECRUIT</a>
-                    </li>
+                    <article class="sub-menu">
+                        <div class="index">
+                            <aside class="sub-list">
+                                <div class="sub-list-padding-box">
+                                  <ul>
+                                      <li><a href="#">채용 안내</a></li>
+                                      <li><a href="#">복리후생</a></li>
+                                      <li><a href="#">직무 정보</a></li>
+                                      <li><a href="#">지원서 접수</a></li>
+                                  </ul>
+                                </div>
+                            </aside>
+                        </div>
+                    </article>
+
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -175,12 +216,40 @@
         </section>
       </main>
     </div>
-    <!-- 3. 하단영역 -->
     <div id="bottom-area">
-      <footer class="bottom-area inbox">
-        <img src="/1차_웹프로젝트/01.자료수집/img/팬텀관련/images/images/하단영역_04.png" alt="하단영역">
-        </section>
-      </footer>
+  <footer class="footer">
+    <div class="footer-wrap">
+
+      <!-- 상단: 로고 + 주소/정책 -->
+      <div class="footer-top">
+        <h2 class="footer__logo">
+          <img src="../01.자료수집/img/로고/emk로고.png" alt="EMK 로고">
+        </h2>
+        <div class="corp-box">
+          <p class="corp-info">
+            5F, SUM BLDG. 176, NONHYEON-RO, GANGNAM-GU, SEOUL, KOREA 06296<br>
+            TEL +82 02 6391 6333 FAX +82 02 6391 6331 MAIL emkmusical@emkm.co.kr<br>
+            COPYRIGHT © 2021 EMKMUSICALCOMPANY. ALL RIGHTS RESERVED BY EMKMUSICAL COMPANY. LTD
+          </p>
+          <p class="policy-line">
+            PRIVACY POLICY&nbsp;&nbsp;|&nbsp;&nbsp;TERMS OF USE
+          </p>
+          <img class="ent-logo" src="../01.자료수집/img/로고/엔터테인먼트-2-uai-516x43.png" alt="EMK ENTERTAINMENT">
+          <p>
+
+          </p>
+        </div>
+      </div>
+
+            <!-- SNS 아이콘 -->
+      <ul class="sns-list">
+        <li><img src="../01.자료수집/img/기타 이미지/유튜브.png" alt="YouTube"></li>
+        <li><img src="../01.자료수집/img/기타 이미지/인스타.png" alt="Instagram"></li>
+        <li><img src="../01.자료수집/img/기타 이미지/카톡플친.png" alt="Kakao"></li>
+      </ul>
+
     </div>
+  </footer>
+</div>
   </body>
 </html>
