--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -116,10 +116,10 @@
                             <aside class="sub-list">
                                 <div class="sub-list-padding-box">
                                   <ul>
-                                      <li><a href="#">채용 안내</a></li>
-                                      <li><a href="#">복리후생</a></li>
-                                      <li><a href="#">직무 정보</a></li>
-                                      <li><a href="#">지원서 접수</a></li>
+                                      <li><a href="#" class="kr">채용 안내</a></li>
+                                      <li><a href="#" class="kr">복리후생</a></li>
+                                      <li><a href="#" class="kr">직무 정보</a></li>
+                                      <li><a href="#" class="kr">지원서 접수</a></li>
                                   </ul>
                                 </div>
                             </aside>
