--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -291,6 +291,7 @@
 
         <!-- 2-5. 팬텀 문구영역 -->
         <section class="mu-part inbox">
+          <div class="glitch-box2"></div>
           <img
             src="/1차_웹프로젝트/01.자료수집/img/팬텀관련/팬텀이미지/문구.png"
             alt="문구"
@@ -299,6 +300,7 @@
 
         <!-- 2-6. 팬텀하단글자 영역 -->
         <section class="bphantom-part inbox">
+          
           <img
             src="/1차_웹프로젝트/01.자료수집/img/팬텀관련/팬텀이미지/팬텀 로고.png"
             alt="팬텀하단글자"
