--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -10,6 +10,15 @@
     <link rel="stylesheet" href="./css/mainpage.css" />
     <!-- relationship CSS -->
     <link rel="stylesheet" href="./css/p-relationship.css" />
+
+
+    
+<!-- 제이쿼리 라이브러리 CDN -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+<!-- 제이쿼리 UI CDN -->
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"></script>
+
     <!-- 메인 JS -->
     <script defer src="./js/mainpage.js"></script>
     <!-- 서브 JS -->
@@ -186,6 +195,7 @@
           </li>
         </ul>
       </section>
+      <button class="btn-top">TOP</button>
     </div>
 
     <!-- 3. 하단영역 -->
