--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -108,7 +108,7 @@
             </h1>
           </section>
           <!-- 1-2. 메뉴박스 -->
-          <section class="menu-box">
+          <section id="menu-box">
             <!-- 메뉴박스하위 메뉴그룹박스 -->
             <div class="menu-group">
               <!-- 1-2-1. GNB메뉴 -->
@@ -275,6 +275,14 @@
             alt="팬텀하단글자"
           />
         </section>
+        
+        <div class="btn-top-box">
+        <ul>
+          <li>
+            <a href="#" class="btn-top">TOP</a>
+          </li>
+        </ul>
+      </div>
       </main>
     </div>
     
