--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -20,7 +20,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"></script>
 
     <!-- 메인 JS -->
-    <script defer src="./js/mainpage.js"></script>
+    <!-- <script defer src="./js/mainpage.js"></script> -->
     <!-- 서브 JS -->
     <script defer src="./js/p-relationship.js"></script>
   </head>
@@ -173,7 +173,7 @@
       </div>
 
       <!-- 포스터 영역 -->
-      <section class="poster-box">
+      <div class="poster-box">
         <ul>
           <li data-year="2025">
             <img
@@ -182,20 +182,30 @@
             />
           </li>
           <li data-year="2021">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg" alt="팬텀사연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg"
+            alt="팬텀사연" />
           </li>
           <li data-year="2018">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg" alt="팬텀삼연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg"
+            alt="팬텀삼연" />
           </li>
           <li data-year="2016">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg" alt="팬텀재연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg"
+            alt="팬텀재연" />
           </li>
           <li data-year="2015">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg" alt="팬텀초연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg"
+            alt="팬텀초연" />
           </li>
         </ul>
-      </section>
-      <button class="btn-top">TOP</button>
+      </div>
+      <div class="btn-top-box">
+        <ul>
+          <li>
+            <a href="#" class="btn-top">TOP</a>
+          </li>
+        </ul>
+      </div>
     </div>
 
     <!-- 3. 하단영역 -->
