--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -174,7 +174,19 @@
 
       <!-- 포스터 영역 -->
       <div class="poster-box">
-        <ul>
+         <img
+              src="./img/팬텀관련/팬텀이미지/팬텀 오연.jpeg"
+              alt="팬텀오연" class="active" data-year="2025"
+            />
+ <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg" data-year="2021"
+            alt="팬텀사연" />
+ <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg" data-year="2018"
+            alt="팬텀삼연" />
+<img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg" data-year="2016"
+            alt="팬텀재연" />
+<img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg" data-year="2015"
+            alt="팬텀초연" />
+        <!-- <ul>
           <li data-year="2025">
             <img
               src="./img/팬텀관련/팬텀이미지/팬텀 오연.jpeg"
@@ -197,7 +209,7 @@
             <img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg"
             alt="팬텀초연" />
           </li>
-        </ul>
+        </ul> -->
       </div>
       <div class="btn-top-box">
         <ul>
