--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -11,13 +11,11 @@
     <!-- relationship CSS -->
     <link rel="stylesheet" href="./css/p-relationship.css" />
 
+    <!-- 제이쿼리 라이브러리 CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
-    
-<!-- 제이쿼리 라이브러리 CDN -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-
-<!-- 제이쿼리 UI CDN -->
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"></script>
+    <!-- 제이쿼리 UI CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.14.1/jquery-ui.min.js"></script>
 
     <!-- 메인 JS -->
     <!-- <script defer src="./js/mainpage.js"></script> -->
@@ -129,16 +127,13 @@
             </div>
           </section>
         </div>
-        
       </header>
     </div>
 
     <!-- 인트로 영상 배너 -->
     <section class="intro-banner">
       <!-- 배경 영상 -->
-      <video
-      src="./img/intro1.mp4" autoplay loop muted playsinline>
-      </video>
+      <video src="./img/intro1.mp4" autoplay loop muted playsinline></video>
 
       <!-- 영상 위 텍스트 -->
       <div class="intro-overlay">
@@ -149,14 +144,14 @@
     <!-- 2. 메인영역 -->
     <div id="main-area">
       <div class="text-box">
-          <img src="./img/팬텀관련/팬텀이미지/팬텀 로고.png" alt="팬텀로고" />
-        </div>
-        <section class="reserve-btn-wrapper">
-          <a href="#" class="btn-reserve">
-            <img src="./img/기타 이미지/티켓 픽토그램_최종.png" alt="티켓" />
-            예매하기
-          </a>
-        </section>
+        <img src="./img/팬텀관련/팬텀이미지/팬텀 로고.png" alt="팬텀로고" />
+      </div>
+      <section class="reserve-btn-wrapper">
+        <a href="#" class="btn-reserve">
+          <img src="./img/기타 이미지/티켓 픽토그램_최종.png" alt="티켓" />
+          예매하기
+        </a>
+      </section>
       <!-- 히스토리 버튼 박스 -->
       <div class="history-btn-box">
         <!-- 히스토리 메뉴 -->
@@ -174,19 +169,7 @@
 
       <!-- 포스터 영역 -->
       <div class="poster-box">
-         <img
-              src="./img/팬텀관련/팬텀이미지/팬텀 오연.jpeg"
-              alt="팬텀오연" class="active" data-year="2025"
-            />
- <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg" data-year="2021"
-            alt="팬텀사연" />
- <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg" data-year="2018"
-            alt="팬텀삼연" />
-<img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg" data-year="2016"
-            alt="팬텀재연" />
-<img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg" data-year="2015"
-            alt="팬텀초연" />
-        <!-- <ul>
+        <ul>
           <li data-year="2025">
             <img
               src="./img/팬텀관련/팬텀이미지/팬텀 오연.jpeg"
@@ -194,22 +177,18 @@
             />
           </li>
           <li data-year="2021">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg"
-            alt="팬텀사연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg" alt="팬텀사연" />
           </li>
           <li data-year="2018">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg"
-            alt="팬텀삼연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg" alt="팬텀삼연" />
           </li>
           <li data-year="2016">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg"
-            alt="팬텀재연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg" alt="팬텀재연" />
           </li>
           <li data-year="2015">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg"
-            alt="팬텀초연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg" alt="팬텀초연" />
           </li>
-        </ul> -->
+        </ul>
       </div>
       <div class="btn-top-box">
         <ul>
