--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -177,16 +177,26 @@
             />
           </li>
           <li data-year="2021">
-            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연.jpg" alt="팬텀사연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연-1.jpg" alt="팬텀사연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연-2.jpg" alt="팬텀사연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 사연-3.jpg" alt="팬텀사연" />
           </li>
           <li data-year="2018">
             <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연.jpg" alt="팬텀삼연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연-2.jpg" alt="팬텀삼연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연-3.jpg" alt="팬텀삼연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연-4.jpg" alt="팬텀삼연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 삼연-5.jpg" alt="팬텀삼연" />
           </li>
           <li data-year="2016">
             <img src="./img/팬텀관련/팬텀이미지/팬텀 재연.jpg" alt="팬텀재연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 재연-2.jpg" alt="팬텀재연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀 재연-3.jpg" alt="팬텀재연" />
           </li>
           <li data-year="2015">
             <img src="./img/팬텀관련/팬텀이미지/팬텀초연.jpg" alt="팬텀초연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀초연-2.jpg" alt="팬텀초연" />
+            <img src="./img/팬텀관련/팬텀이미지/팬텀초연-3.jpg" alt="팬텀초연" />
           </li>
         </ul>
       </div>
