--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -200,13 +200,8 @@
           </li>
         </ul>
       </div>
-      <div class="btn-top-box">
-        <ul>
-          <li>
-            <a href="#" class="btn-top">TOP</a>
-          </li>
-        </ul>
-      </div>
+       <!-- 상단이동버튼 -->
+      <button class="btn-top">TOP</button>
     </div>
 
     <!-- 3. 하단영역 -->
