--- a/1차_웹프로젝트/03.구현소스/intropage.html
+++ b/1차_웹프로젝트/03.구현소스/intropage.html
@@ -8,12 +8,16 @@
     <link rel="stylesheet" href="./css/common.css" />
     <!-- intro CSS -->
     <link rel="stylesheet" href="./css/intropage.css" />
+    <!-- 코어 CSS -->
+    <!-- <link rel="stylesheet" href="./css/core.css" /> -->
     <!-- 제이쿼리 라이브러리 CDN -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- 제이쿼리 UI -->
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>
     <!-- JS -->
     <script defer src="./js/intropage.js"></script>
+    <!-- 공통 JS -->
+    <script defer src="./js/common.js"></script>
   </head>
   <body>
     <!-- 마우스 커서 변경 -->
@@ -41,6 +45,9 @@
     <div id="curtain-area">
       <div class="curtain-box">
         <ul>
+          <li>
+            <p>CLICK <br> ⇓</p>
+          </li>
           <li>
             <img
               src="./img/기타 이미지/왼쪽 중앙.png"
@@ -70,7 +77,7 @@
             />
           </li>
           <li>
-            <img src="./img/기타 이미지/위 커튼.png" class="top" alt="위 커튼">
+            <!-- <img src="./img/기타 이미지/위 커튼.png" class="top" alt="위 커튼"> -->
           </li>
         </ul>
       </div>
