--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -16,6 +16,8 @@
     <script src="./js/mgGlitch.min.js"></script>
     <!-- 메인 JS -->
     <script defer src="./js/mainpage.js"></script>
+    <!-- 공통 JS -->
+    <script defer src="./js/common.js"></script>
     <!-- Google Model Viewer 라이브러리 불러오기 -->
     <script
       type="module"
