--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -21,6 +21,8 @@
     <!-- <script defer src="./js/mainpage.js"></script> -->
     <!-- 서브 JS -->
     <script defer src="./js/p-relationship.js"></script>
+    <!-- 공통 JS -->
+    <script defer src="./js/common.js"></script>
   </head>
   <body>
     <!-- 마우스 커서 변경 -->
