--- a/1차_웹프로젝트/03.구현소스/intropage.html
+++ b/1차_웹프로젝트/03.구현소스/intropage.html
@@ -30,7 +30,7 @@
     <div id="intro-area">
       <section class="intro-box">
         <video
-          src="./img/intro1.mp4"          
+          src="./img/emk_video.mp4"          
           loop
           muted
           playsinline="true"
@@ -44,7 +44,7 @@
     <!-- 커튼 영역 -->
     <div id="curtain-area">
       <div class="curtain-box">
-        <ul>
+        <ul class="click">
           <li>
             <p>CLICK <br> ⇓</p>
           </li>
