--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -42,7 +42,16 @@
           playsinline="true"
         ></video>
         <div class="scroll">
-          <img src="./img/기타 이미지/스크롤.png" alt="스크롤다운" />
+          <ul>
+            <li>
+              <img src="./img/기타 이미지/스크롤.png" alt="스크롤다운" />
+            </li>
+          </ul>
+          <div class="down">
+            <ul>
+              <li>SCROLL DOWN ▼</li>
+            </ul>
+          </div>
         </div>
       </section>
     </div>
@@ -60,12 +69,12 @@
             </article>
           </div>
           <div class="arw_left">
-            <a href="#" class="btn left">
+            <a href="frida_mainpage.html#intro-ticket-area" class="btn left">
               <img src="./img/기타 이미지/화살표_팬텀.png" alt="왼쪽화살표" />
             </a>
           </div>
           <div class="arw_right">
-            <a href="#" class="btn right">
+            <a href="frida_mainpage.html#intro-ticket-area" class="btn right">
               <img
                 src="./img/기타 이미지/화살표_팬텀_R.png"
                 alt="오른쪽화살표"
