--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -148,7 +148,7 @@
                         <aside class="sub-list">
                           <div class="sub-list-padding-box">
                             <ul>
-                              <li><a href="#" class="btn">ORIGINAL</a></li>
+                              <li><a href="./f-relationshp.html" class="btn">ORIGINAL</a></li>
                               <li><a href="./p-relationshp.html" class="btn">LICENSE</a></li>
                             </ul>
                           </div>
