--- a/1차_웹프로젝트/03.구현소스/mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/mainpage.html
@@ -111,7 +111,7 @@
             <!-- 1-1. 로고박스 -->
             <section class="logo-box">
               <h1 class="logo">
-                <a href="#" class="btn emk">
+                <a href="mainpage.html" class="btn emk">
                   <img
                     src="../01.자료수집/img/로고/emk_logo_수정.png"
                     alt="로고"
@@ -126,7 +126,7 @@
               <nav class="gnb-menu">
                 <ul>
                   <li>
-                    <a href="" class="btn">EMK</a>
+                    <a href="#" class="btn">EMK</a>
                     <article class="sub-menu">
                       <div class="index">
                         <aside class="sub-list">
@@ -142,7 +142,7 @@
                     </article>
                   </li>
                   <li>
-                    <a href="" class="btn">PRODUCTION</a>
+                    <a href="#" class="btn">PRODUCTION</a>
                     <article class="sub-menu">
                       <div class="index">
                         <aside class="sub-list">
@@ -156,9 +156,9 @@
                       </div>
                     </article>
                   </li>
-                  <li><a href="" class="btn">AUDITION</a></li>
+                  <li><a href="#" class="btn">AUDITION</a></li>
                   <li>
-                    <a href="" class="btn">BOARD</a>
+                    <a href="#" class="btn">BOARD</a>
                     <article class="sub-menu">
                       <div class="index">
                         <aside class="sub-list">
@@ -172,9 +172,9 @@
                       </div>
                     </article>
                   </li>
-                  <li><a href="" class="btn">SHOP</a></li>
+                  <li><a href="#" class="btn">SHOP</a></li>
                   <li>
-                    <a href="" class="btn">RECRUIT</a>
+                    <a href="#" class="btn">RECRUIT</a>
                     <article class="sub-menu">
                       <div class="index">
                         <aside class="sub-list">
