--- a/1차_웹프로젝트/03.구현소스/f-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/f-relationshp.html
@@ -81,7 +81,7 @@
                           <div class="sub-list-padding-box">
                             <ul>
                               <li><a href="#" class="btn">ORIGINAL</a></li>
-                              <li><a href="#" class="btn">LICENSE</a></li>
+                              <li><a href="p-relationshp.html" class="btn">LICENSE</a></li>
                             </ul>
                           </div>
                         </aside>
