--- a/1차_웹프로젝트/03.구현소스/p-relationshp.html
+++ b/1차_웹프로젝트/03.구현소스/p-relationshp.html
@@ -80,7 +80,7 @@
                         <aside class="sub-list">
                           <div class="sub-list-padding-box">
                             <ul>
-                              <li><a href="#" class="btn">ORIGINAL</a></li>
+                              <li><a href="f-relationshp.html" class="btn">ORIGINAL</a></li>
                               <li><a href="#" class="btn">LICENSE</a></li>
                             </ul>
                           </div>
