--- a/1차_웹프로젝트/03.구현소스/frida_mainpage.html
+++ b/1차_웹프로젝트/03.구현소스/frida_mainpage.html
@@ -135,9 +135,9 @@
                         <aside class="sub-list">
                           <div class="sub-list-padding-box">
                             <ul>
-                              <li><a href="#" class="btn">ORIGINAL</a></li>
+                              <li><a href="f-relationshp.html" class="btn">ORIGINAL</a></li>
                               <li>
-                                <a href="./p-relationshp.html" class="btn"
+                                <a href="#" class="btn"
                                   >LICENSE</a
                                 >
                               </li>
